--- a/projects/mona-ui/src/lib/dropdowns/modules/combo-box/components/combo-box/combo-box.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/combo-box/components/combo-box/combo-box.component.html
@@ -1,4 +1,4 @@
-<div class="mona-dropdown mona-combo-box mona-input-selector" [attr.tabindex]="disabled ? -1 : 0"
+<div class="mona-dropdown mona-combo-box mona-input-selector" 
      [ngClass]="{'mona-disabled': disabled}"
      #comboboxWrapper>
     <div class="mona-input-selector-value">
