--- a/projects/mona-ui/src/lib/buttons/modules/chip/components/chip/chip.component.html
+++ b/projects/mona-ui/src/lib/buttons/modules/chip/components/chip/chip.component.html
@@ -1,4 +1,4 @@
-<div class="mona-chip" [ngClass]="{'disabled': disabled}" [attr.tabindex]="disabled ? -1 : 0">
+<div class="mona-chip" [ngClass]="{'disabled': disabled}" [attr.tabindex]="disabled ? -1 : tabindex">
     <div></div>
     <div class="mona-chip-content">
         <span class="mona-chip-label">{{label}}</span>
@@ -6,7 +6,7 @@
             <ng-content></ng-content>
         </ng-container>
     </div>
-    <div class="mona-chip-close" (click)="remove.emit()" *ngIf="removable">
+    <div class="mona-chip-close" (click)="remove.emit($event)" *ngIf="removable">
 <!--        <span class="mona-chip-close-icon">x</span>-->
         <span class="mona-chip-close-icon">⨯</span>
     </div>
