--- a/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
@@ -26,8 +26,8 @@
         </mona-text-box>
     </div>
     <div>
-        <mona-list [data]="viewData" [itemDisabler]="itemDisabler"
-                   [value]="selectedListItems" (valueChange)="onSelectedListItemsChange($event)">
+        <mona-list [data]="viewData" [itemDisabler]="itemDisabler" [highlightable]="true" [highlightedItem]="selectedListItems[0]"
+                   [value]="selectedListItems" (valueChange)="onSelectedListItemsChange($event)" #listComponent>
             <ng-container *ngIf="itemTemplate">
                 <ng-template monaListItemTemplate let-dataItem let-listItem="listItem">
                     <ng-container [ngTemplateOutlet]="itemTemplate ?? null"
