--- a/projects/mona-ui/src/lib/dropdowns/modules/multi-select/components/multi-select/multi-select.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/multi-select/components/multi-select/multi-select.component.html
@@ -1,25 +1,32 @@
-<div class="mona-dropdown mona-multi-select mona-input-selector"
-     [ngClass]="{'mona-disabled': disabled}"
+<div class="mona-dropdown mona-multi-select mona-input-selector" [attr.tabindex]="disabled ? -1 : 0"
+     [ngClass]="{'mona-disabled': disabled}"  (click)="open()"
      #multiSelectWrapper>
     <div class="mona-input-selector-value">
         <div>
-            <mona-chip *ngFor="let item of selectedListItems" [removable]="true" (remove)="onSelectedItemRemove(item)" (click)="$event.stopImmediatePropagation();">
+            <mona-chip *ngFor="let item of selectedListItems"
+                       [tabindex]="-1" [removable]="true" (remove)="onSelectedItemRemove($event, item)" (click)="$event.stopImmediatePropagation();">
                 <span>{{item.text}}</span>
             </mona-chip>
-            <mona-text-box [ngModel]="valueText" (ngModelChange)="filterChange$.next($event)"
-                           (keydown)="valueKeydown$.next($event)"></mona-text-box>
         </div>
     </div>
-    <div class="mona-input-selector-icon" (click)="open()">
+    <div class="mona-input-selector-icon">
         <fa-icon [icon]="dropdownIcon"></fa-icon>
     </div>
 </div>
 
 <ng-template #multiSelectPopupTemplate>
+    <div *ngIf="filterable">
+        <mona-text-box class="filter-box" [ngModel]="filterText" (ngModelChange)="filterChange$.next($event)"
+                       (keydown)="filterKeydown$.next($event)">
+            <ng-template monaTextBoxPrefixTemplate>
+                <fa-icon [icon]="filterIcon"></fa-icon>
+            </ng-template>
+        </mona-text-box>
+    </div>
     <div>
         <mona-list [data]="viewData" [itemDisabler]="itemDisabler" [highlightedItem]="highlightedItem"
                    [highlightable]="true" selectionMode="multiple"
-                   [value]="selectedListItems" (valueChange)="onSelectedListItemsChange($event)">
+                   [value]="selectedListItems" (valueChange)="onSelectedListItemsChange($event)" #listComponent>
             <ng-container *ngIf="itemTemplate">
                 <ng-template monaListItemTemplate let-dataItem let-listItem="listItem">
                     <ng-container [ngTemplateOutlet]="itemTemplate ?? null"
