--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -95,7 +95,7 @@
 
     <div>
         <mona-drop-down-list [data]="dropdownListDataItems" groupField="" textField="text" valueField="value"
-                              [filterable]="true" [disabled]="false"
+                              [filterable]="true" [disabled]="false" [itemDisabler]="dropdownItemDisabler"
                              [value]="selectedDropdownListDataItem" (valueChange)="onDropDownValueChange($event)" style="width: 200px; margin-right: 20px;">
 <!--            <ng-template monaDropDownListItemTemplate let-dataItem let-listItem="listItem">-->
 <!--                <span style="color: deeppink;" *ngIf="!listItem.disabled && dataItem.value <= 3">{{dataItem.text}}</span>-->
@@ -110,17 +110,17 @@
             </ng-template>
         </mona-drop-down-list>
 
-        <mona-combo-box [data]="dropdownListDataItems" itemDisabler="active"
+        <mona-combo-box [data]="dropdownListDataItems" [itemDisabler]="dropdownItemDisabler"
                         [value]="selectedComboBoxDataItem" (valueChange)="onComboBoxValueChange($event)"
                         [filterable]="false"
                         textField="text" valueField="value" groupField="group" style="margin-right: 20px;">
             <ng-template monaComboBoxItemTemplate let-dataItem>
-                <span style="color: darkred; font-weight: bold">{{dataItem.text}}</span>
+                <span style="color: yellowgreen; font-weight: bold">{{dataItem.text}}</span>
             </ng-template>
         </mona-combo-box>
 
         <mona-multi-select [data]="dropdownListDataItems" [value]="selectedMultiSelectDataItems2" (valueChange)="onMultiSelectValueChange($event)"
-                           [itemDisabler]="'active'"
+                           [itemDisabler]="dropdownItemDisabler" [monaMultiSelectSummaryTag]="2"
                            textField="text" valueField="value" groupField="group" style="width: 250px;">
             <ng-template monaMultiSelectItemTemplate let-dataItem>
                 <span style="color: greenyellow; font-weight: bold">{{dataItem.text}}</span>
@@ -128,6 +128,12 @@
             <ng-template monaMultiSelectGroupTemplate let-group>
                 <span style="color: deepskyblue; font-weight: bold">{{group.toUpperCase()}}</span>
             </ng-template>
+            <ng-template monaMultiSelectSummaryTagTemplate let-dataItems>
+                <span style="color: deeppink;"><span style="font-weight: bold; color: deepskyblue;">{{dataItems.length - 2}}</span> items selected.</span>
+            </ng-template>
+<!--            <ng-template monaMultiSelectTagTemplate let-dataItem>-->
+<!--                {{dataItem.text}} :: {{dataItem.value}}-->
+<!--            </ng-template>-->
         </mona-multi-select>
     </div>
 
