--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -120,7 +120,7 @@
         </mona-combo-box>
 
         <mona-multi-select [data]="dropdownListDataItems" [value]="selectedMultiSelectDataItems2" (valueChange)="onMultiSelectValueChange($event)"
-                           [itemDisabler]="dropdownItemDisabler" [monaMultiSelectSummaryTag]="2"
+                           [itemDisabler]="dropdownItemDisabler" [monaMultiSelectSummaryTag]="0"
                            textField="text" valueField="value" groupField="group" style="width: 250px;">
             <ng-template monaMultiSelectItemTemplate let-dataItem>
                 <span style="color: greenyellow; font-weight: bold">{{dataItem.text}}</span>
@@ -129,13 +129,19 @@
                 <span style="color: deepskyblue; font-weight: bold">{{group.toUpperCase()}}</span>
             </ng-template>
             <ng-template monaMultiSelectSummaryTagTemplate let-dataItems>
-                <span style="color: deeppink;"><span style="font-weight: bold; color: deepskyblue;">{{dataItems.length - 2}}</span> items selected.</span>
+                <span style="color: deeppink;"><span style="font-weight: bold; color: deepskyblue;">{{dataItems.length}}</span> items selected.</span>
             </ng-template>
 <!--            <ng-template monaMultiSelectTagTemplate let-dataItem>-->
 <!--                {{dataItem.text}} :: {{dataItem.value}}-->
 <!--            </ng-template>-->
         </mona-multi-select>
     </div>
+
+<!--    <div>-->
+<!--        <mona-drop-down-list [data]="dropdownPrimitiveDataItems"></mona-drop-down-list>-->
+<!--        <mona-combo-box [data]="dropdownPrimitiveDataItems"></mona-combo-box>-->
+<!--        <mona-multi-select [data]="dropdownPrimitiveDataItems"></mona-multi-select>-->
+<!--    </div>-->
 
     <div>
         <input type="text" [(ngModel)]="textBoxValue2" monaTextBox style="margin-right: 10px;" />
