Rename list component to popup list component

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -201,8 +201,8 @@
     </div>
 
     <div>
-        <mona-list [data]="dropdownListDataItems" groupField="group" textField="text" valueField="value" [value]="[dropdownListDataItems[2]]"
-        [highlightedValues]="[dropdownListDataItems[2]]" (valueChange)="print($event)"></mona-list>
+        <mona-popup-list [data]="dropdownListDataItems" groupField="group" textField="text" valueField="value" [value]="[]"
+        [highlightedValues]="[]" (valueChange)="print($event)"></mona-popup-list>
     </div>
 
 </div>
