--- a/projects/mona-ui/src/lib/dropdowns/components/popup-list/popup-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/components/popup-list/popup-list.component.html
@@ -2,13 +2,19 @@
     <ng-container *ngIf="popupListService.listData.length !== 0; else empty;">
         <ng-container *ngFor="let group of popupListService.listData">
             <ng-container *ngIf="$any(group.source).length !== 0">
-                <ng-container>
+                <ng-container *ngIf="!groupTemplate">
                     <li class="mona-list-group-header" *ngIf="group.key">{{group.key}}</li>
+                </ng-container>
+                <ng-container *ngIf="groupTemplate && group.key">
+                    <li class="mona-list-group-header">
+                        <ng-container [ngTemplateOutlet]="groupTemplate"
+                                      [ngTemplateOutletContext]="{$implicit: group.key}"></ng-container>
+                    </li>
                 </ng-container>
             </ng-container>
             <li class="mona-list-item" *ngFor="let item of group.source" (click)="onListItemClick(item, $event)"
-                [ngClass]="{'mona-selected': item.selected, 'mona-highlighted': item.highlighted}">
-                <mona-popup-list-item [item]="item"></mona-popup-list-item>
+                [ngClass]="{'mona-selected': item.selected, 'mona-highlighted': item.highlighted, 'mona-disabled': item.disabled}">
+                <mona-popup-list-item [item]="item" [itemTemplate]="itemTemplate"></mona-popup-list-item>
             </li>
         </ng-container>
     </ng-container>
