--- a/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
@@ -1,6 +1,11 @@
 <div class="mona-dropdown mona-dropdown-list mona-input-selector" [attr.tabindex]="disabled ? -1 : 0" (click)="open()" #dropdownWrapper>
     <div class="mona-input-selector-value">
-        <ng-container>{{value?.[$any(textField)]}}</ng-container>
+        <ng-container *ngIf="!valueTemplate">
+            <span>{{valuePopupListItem?.text}}</span>
+        </ng-container>
+        <ng-container *ngIf="valueTemplate">
+            <ng-container [ngTemplateOutlet]="valueTemplate" [ngTemplateOutletContext]="{$implicit: valuePopupListItem?.data, listItem: valuePopupListItem}"></ng-container>
+        </ng-container>
     </div>
     <div class="mona-input-selector-icon">
         <fa-icon [icon]="dropdownIcon"></fa-icon>
@@ -9,7 +14,18 @@
 
 <ng-template #popupTemplate>
     <div *ngIf="!!popupRef">
-        <mona-popup-list [data]="data" [textField]="textField" [valueField]="valueField" [groupField]="groupField" [value]="value ? [value] : []"
-                         (valueChange)="onPopupListValueChange($event)"></mona-popup-list>
+        <mona-popup-list [textField]="textField" [valueField]="valueField" [groupField]="groupField" [value]="value ? [value] : []"
+                         (valueChange)="onPopupListValueChange($event)">
+            <ng-container *ngIf="itemTemplate">
+                <ng-template monaListItemTemplate let-dataItem let-listItem="listItem">
+                    <ng-container [ngTemplateOutlet]="itemTemplate ?? null" [ngTemplateOutletContext]="{$implicit: dataItem, listItem}"></ng-container>
+                </ng-template>
+            </ng-container>
+            <ng-container *ngIf="groupTemplate">
+                <ng-template monaListGroupTemplate let-dataItem let-listItem="listItem">
+                    <ng-container [ngTemplateOutlet]="groupTemplate ?? null" [ngTemplateOutletContext]="{$implicit: dataItem, listItem}"></ng-container>
+                </ng-template>
+            </ng-container>
+        </mona-popup-list>
     </div>
 </ng-template>
