Dropdown filtering, value placeholder and clear button

--- a/projects/mona-ui/src/lib/buttons/modules/chip/components/chip/chip.component.html
+++ b/projects/mona-ui/src/lib/buttons/modules/chip/components/chip/chip.component.html
@@ -1,4 +1,4 @@
-<div class="mona-chip" [ngClass]="{'disabled': disabled}" [attr.tabindex]="disabled ? -1 : tabindex">
+<div class="mona-chip" [ngClass]="{'mona-disabled': disabled}" [attr.tabindex]="disabled ? -1 : tabindex">
     <div></div>
     <div class="mona-chip-content">
         <span class="mona-chip-label">{{label}}</span>
