--- a/projects/mona-ui/src/lib/dropdowns/components/popup-list/popup-list.component.scss
+++ b/projects/mona-ui/src/lib/dropdowns/components/popup-list/popup-list.component.scss
@@ -24,3 +24,7 @@ li.mona-list-group-header {
     pointer-events: none;
     font-weight: bold;
 }
+
+mona-text-box.filter-box {
+    border: none;
+}
