--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
 
     <div>
-        <button monaButton [disabled]="false" [primary]="false" [selected]="false" [toggleable]="false"
+        <button monaButton [disabled]="false" [primary]="false" [selected]="false" [toggleable]="false" [flat]="false"
                 (selectedChange)="onButtonSelectedChange($event)" (click)="openPopup($event)" #testButtonRef>Test Button
         </button>
     </div>
@@ -110,16 +110,17 @@
 <!--            </ng-template>-->
 <!--        </mona-drop-down-list>-->
 
-        <mona-drop-down-list [data]="dropdownListDataItems" textField="text" valueField="value" groupField="group" [value]="dropdownListDataItems[12]"
-                             [itemDisabler]="dropdownItemDisabler" (valueChange)="onDropDownValueChange($event)">
-            <ng-template monaDropDownListItemTemplate let-dataItem let-listItem="listItem">
-                <span style="color: deeppink;" *ngIf="dataItem.value % 3 === 0 && !listItem.disabled">{{dataItem.text}}</span>
-                <span style="color: dodgerblue;" *ngIf="dataItem.value % 3 !== 0 && !listItem.disabled">{{dataItem.text}}</span>
-                <span *ngIf="listItem.disabled">{{dataItem.text}}</span>
-            </ng-template>
-            <ng-template monaDropDownListValueTemplate let-dataItem>
-                <span style="color: darkorange; font-weight: 600;">{{dataItem?.text}}</span>
-            </ng-template>
+        <mona-drop-down-list [data]="dropdownListDataItems" textField="text" valueField="value" groupField="group" [filterable]="true"
+                             [showClearButton]="true" placeholder="Select an item..." [(value)]="selectedDropdownListDataItem"
+                             [itemDisabler]="dropdownItemDisabler" (valueChange)="onDropDownValueChange($event)" style="width: 200px;">
+<!--            <ng-template monaDropDownListItemTemplate let-dataItem let-listItem="listItem">-->
+<!--                <span style="color: deeppink;" *ngIf="dataItem.value % 3 === 0 && !listItem.disabled">{{dataItem.text}}</span>-->
+<!--                <span style="color: dodgerblue;" *ngIf="dataItem.value % 3 !== 0 && !listItem.disabled">{{dataItem.text}}</span>-->
+<!--                <span *ngIf="listItem.disabled">{{dataItem.text}}</span>-->
+<!--            </ng-template>-->
+<!--            <ng-template monaDropDownListValueTemplate let-dataItem>-->
+<!--                <span style="color: darkorange; font-weight: 600;">{{dataItem?.text}}</span>-->
+<!--            </ng-template>-->
             <ng-template monaDropDownListGroupTemplate let-group>
                 <span style="color: crimson; font-weight: bold;">{{group}}</span>
             </ng-template>
