--- a/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
@@ -1,11 +1,17 @@
 <div class="mona-dropdown mona-dropdown-list mona-input-selector" [ngClass]="{'mona-disabled': disabled}" [attr.tabindex]="disabled ? -1 : 0" (click)="open()" #dropdownWrapper>
     <div class="mona-input-selector-value">
         <ng-container *ngIf="!valueTemplate">
-            <span>{{valuePopupListItem?.text}}</span>
+            <span *ngIf="valuePopupListItem">{{valuePopupListItem?.text}}</span>
+            <span *ngIf="!valuePopupListItem">{{placeholder}}</span>
         </ng-container>
         <ng-container *ngIf="valueTemplate">
             <ng-container [ngTemplateOutlet]="valueTemplate" [ngTemplateOutletContext]="{$implicit: valuePopupListItem?.data, listItem: valuePopupListItem}"></ng-container>
         </ng-container>
+    </div>
+    <div class="mona-input-selector-icon" *ngIf="showClearButton && valuePopupListItem">
+        <button monaButton [flat]="true" (click)="clearValue($event)" class="mona-dropdown-clear-icon">
+            <fa-icon [icon]="clearIcon"></fa-icon>
+        </button>
     </div>
     <div class="mona-input-selector-icon">
         <fa-icon [icon]="dropdownIcon"></fa-icon>
@@ -15,6 +21,7 @@
 <ng-template #popupTemplate>
     <div *ngIf="!!popupRef">
         <mona-popup-list [textField]="textField" [valueField]="valueField" [groupField]="groupField" [value]="value ? [value] : []"
+                         [filterable]="filterable"
                          (valueChange)="onPopupListValueChange($event)">
             <ng-container *ngIf="itemTemplate">
                 <ng-template monaListItemTemplate let-dataItem let-listItem="listItem">
