--- a/projects/mona-ui/styles/mona-dark.scss
+++ b/projects/mona-ui/styles/mona-dark.scss
@@ -16,6 +16,7 @@
     --mona-popup-shadow: 0 5px 10px -3px var(--mona-shadow-color);
     --mona-shadow-color: #101114;
     --mona-text: #CCCCCC;
+    --mona-text-light: #FFFFFF;
 }
 
 
