--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -246,6 +246,7 @@ mona-button-group button[monaButton] {
 
 .mona-dropdown {
     width: 100%;
+    overflow: hidden;
 }
 
 .mona-dropdown-clear-icon {
