--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -110,7 +110,7 @@
 <!--            </ng-template>-->
 <!--        </mona-drop-down-list>-->
 
-        <mona-drop-down-list [data]="dropdownListDataItems" textField="text" valueField="value" groupField="group" [filterable]="true"
+        <mona-drop-down-list [data]="dropdownListDataItems" textField="text" valueField="value" groupField="group" [filterable]="true" [disabled]="false"
                              [showClearButton]="true" placeholder="Select an item..." [(value)]="selectedDropdownListDataItem"
                              [itemDisabler]="dropdownItemDisabler" (valueChange)="onDropDownValueChange($event)" style="width: 200px; margin-right: 20px;">
 <!--            <ng-template monaDropDownListItemTemplate let-dataItem let-listItem="listItem">-->
@@ -126,8 +126,9 @@
             </ng-template>
         </mona-drop-down-list>
 
-        <mona-combo-box [data]="dropdownListDataItems" textField="text" valueField="value" groupField="group" [filterable]="true" style="width: 200px;"
-            [value]="dropdownListDataItems[3]" (valueChange)="onComboBoxValueChange($event)"></mona-combo-box>
+        <mona-combo-box [data]="dropdownListDataItems" textField="text" valueField="value" groupField="group" [filterable]="true" style="width: 200px;" [disabled]="false"
+                        [showClearButton]="true"
+            [value]="dropdownListDataItems[3]" [itemDisabler]="dropdownItemDisabler" (valueChange)="onComboBoxValueChange($event)"></mona-combo-box>
 
 <!--        <mona-combo-box [data]="dropdownListDataItems" [itemDisabler]="dropdownItemDisabler"-->
 <!--                        [value]="selectedComboBoxDataItem" (valueChange)="onComboBoxValueChange($event)"-->
