--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -126,9 +126,11 @@
             </ng-template>
         </mona-drop-down-list>
 
-        <mona-combo-box [data]="dropdownListDataItems" textField="text" valueField="value" groupField="group" [filterable]="true" style="width: 200px;" [disabled]="false"
-                        [showClearButton]="true"
+        <mona-combo-box [data]="dropdownListDataItems" textField="text" valueField="value" groupField="group" [filterable]="false" style="width: 200px; margin-right: 20px;" [disabled]="false"
+                        [showClearButton]="true" [allowCustomValue]="true" [valueNormalizer]="comboBoxValueNormalizer$"
             [value]="dropdownListDataItems[3]" [itemDisabler]="dropdownItemDisabler" (valueChange)="onComboBoxValueChange($event)"></mona-combo-box>
+
+        <mona-combo-box [data]="dropdownPrimitiveDataItems" [allowCustomValue]="true" [showClearButton]="true" [filterable]="true" style="width: 200px; margin-right: 20px;"></mona-combo-box>
 
 <!--        <mona-combo-box [data]="dropdownListDataItems" [itemDisabler]="dropdownItemDisabler"-->
 <!--                        [value]="selectedComboBoxDataItem" (valueChange)="onComboBoxValueChange($event)"-->
