--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -137,11 +137,16 @@
         <mona-combo-box [data]="dropdownPrimitiveDataItems" [allowCustomValue]="true" [showClearButton]="true"
                         [filterable]="true" [itemDisabler]="dropdownPrimitiveItemDisabler" style="width: 200px; margin-right: 20px;"
                         [value]="selectedPrimitiveComboBoxDataItem" (valueChange)="onComboBoxValueChange($event)">
-        >
             <ng-template monaComboBoxItemTemplate let-dataItem>
                 <span style="color: darkorange; font-weight: 600;">{{dataItem}}</span>
             </ng-template>
         </mona-combo-box>
+
+        <mona-multi-select [data]="dropdownListDataItems" textField="text" valueField="value" groupField="group" style="width: 200px; margin-right: 20px;"
+                           [monaMultiSelectSummaryTag]="0"
+                           [value]="selectedMultiSelectDataItems" (valueChange)="onMultiSelectValueChange($event)">
+
+        </mona-multi-select>
 
 <!--        <mona-combo-box [data]="dropdownListDataItems" [itemDisabler]="dropdownItemDisabler"-->
 <!--                        [value]="selectedComboBoxDataItem" (valueChange)="onComboBoxValueChange($event)"-->
