--- a/projects/mona-ui/src/lib/dropdowns/modules/combo-box/components/combo-box/combo-box.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/combo-box/components/combo-box/combo-box.component.html
@@ -3,7 +3,7 @@
         <mona-text-box [ngModel]="comboBoxValue" (ngModelChange)="comboBoxValue$.next($event)" (keydown)="onKeydown($event)"></mona-text-box>
     </div>
     <div class="mona-input-selector-icon" *ngIf="showClearButton && valuePopupListItem">
-        <button monaButton [flat]="true" (click)="clearValue($event)" class="mona-dropdown-clear-icon">
+        <button monaButton [flat]="true" (click)="clearValue($event)" class="mona-dropdown-clear-icon" tabindex="-1">
             <fa-icon [icon]="clearIcon"></fa-icon>
         </button>
     </div>
