--- a/projects/mona-ui/src/lib/dropdowns/modules/multi-select/components/multi-select/multi-select.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/multi-select/components/multi-select/multi-select.component.html
@@ -23,7 +23,7 @@
 
 <ng-template #popupTemplate>
     <div *ngIf="!!popupRef">
-        <mona-popup-list [textField]="textField" [valueField]="valueField" [groupField]="groupField"
+        <mona-popup-list [textField]="textField" [valueField]="valueField" [groupField]="groupField" [filterable]="filterable"
                          [value]="value" selectionMode="multiple" (valueChange)="onPopupListValueChange($event)">
             <ng-container *ngIf="itemTemplate">
                 <ng-template monaListItemTemplate let-dataItem let-listItem="listItem">
