--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -142,6 +142,9 @@
             </ng-template>
         </mona-combo-box>
 
+        <mona-auto-complete [data]="dropdownListDataItems" textField="text" valueField="value" groupField="group" [showClearButton]="true"
+                            [value]="autoCompleteValue" (valueChange)="onAutoCompleteValueChange($event)" style="width: 200px; margin-right: 20px;"></mona-auto-complete>
+
 
 
 <!--        <mona-combo-box [data]="dropdownListDataItems" [itemDisabler]="dropdownItemDisabler"-->
