--- a/projects/mona-ui-tester/src/app/app.component.scss
+++ b/projects/mona-ui-tester/src/app/app.component.scss
@@ -2,6 +2,27 @@ div.wrapper {
     width: 100%;
     height: 100%;
     display: flex;
+    //align-items: center;
+    //justify-content: center;
+    //flex-direction: column;
+    //& > div {
+    //    margin: 5px;
+    //    display: flex;
+    //}
+}
+
+div.side-bar {
+    width: 350px;
+    height: 100%;
+    border-right: 1px solid var(--mona-border-color);
+    background-color: var(--mona-background-dark);
+    padding: 20px 10px;
+}
+
+div.content {
+    width: calc(100% - 350px);
+    height: 100%;
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
